--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body{
-	/**background-image: url("me1.jpg");
-	background-repeat: no-repeat;
-    background-size: 100% 100%;**/
+/* My Theme Font */
 	font-family: "Myriad Pro", sans-serif;
 	
 }
@@ -9,7 +7,139 @@ html, body {
 	margin:0 ;
 	padding: 0;
 	background: #f1f1f1;
+	min-width: 100%;
+	min-height: 100%;
+	/* If white boxes are made, an off tone will show the box */
+	/*background: #f1f1f1;*/
 }
+
+.intro, .biggerfont{
+    text-align: center;
+	color: #0F78C3;
+}
+
+.biggerfont{
+	font-size:1.5vw;
+}
+
+.intro{
+	font-size:3vw;
+}
+
+/* =============== NAV BAR CODE ===============*/
+.nav1 {
+  overflow: hidden;
+  /**background-color: white;**/
+  font-weight: 540;
+  font-family: "Myriad Pro", sans-serif;
+}
+
+/* The nav bar from portfoilo */
+.nav1 a:not(:first-child){float: right;
+padding: 22px 23px;
+}
+
+/* Styling Nav bar text */
+.nav1 a {
+  float: left;
+  display: block;
+  color: #0F78C3;
+  text-align: center;
+  padding: 10px 31px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+/* text black and background light gray*/
+.nav1 a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* styling of the logo title on left */
+.active {
+  background-color: #0F78C3;
+  color: white;
+}
+
+/* menubutton hidden default */
+.nav1 .menubutton {
+  display: none;
+}
+
+/* responsive design menu, just 
+another way make this work on different screen sizes  */
+@media screen and (max-width: 600px) {
+  .nav1 a:not(:first-child) {display: none;}
+  .nav1 a.menubutton {
+    float: right;
+    display: block;
+  }
+}
+
+/* when the width of window is less than 600px (responsive menu) */
+@media screen and (max-width: 600px) {
+  .nav1.responsive {position: relative;}
+  .nav1.responsive .menubutton {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .nav1.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* ------------ NAV BAR CODE ENDS ------------ */
+
+/* =============== FOOTER CODE ===============*/
+
+/* footer take 100% width */
+.footer {
+width: 100%;
+}
+
+/* footer styling and trying to make it at bottom of the page 
+left and button equal 0 */
+footer {
+  margin-top: 20px;
+  width: 100%;
+  margin: 0 auto;
+  background: #0F78C3;
+  padding: 15px 0px;
+  text-align: center;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+/* links of the footer */
+footer a {
+  color: #ecf7fe;
+  font-size: 20px;
+  padding: 0px 5%;
+  border-right: 1px solid white;
+  transition: all .5s ease;
+}
+
+footer a:first-child {
+  /* adding the 1px line to the left for 1st element */
+  border-left: 1px solid white;
+}
+
+/* for the links in footer on hover */
+footer a:hover {
+  color: white;
+  opacity:.8;
+}
+
+/* ------------ FOOTER CODE ENDS ------------ */
+
+
+/* +++++++++++++ INDEX PAGE CSS +++++++++++++ */
+
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
@@ -59,95 +189,10 @@ margin:20px;
 	position:0;
 	
 }
-.nav1 {
-  overflow: hidden;
-  /**background-color: white;**/
-  font-weight: 540;
-  font-family: "Myriad Pro", sans-serif;
-}
-
-.nav1 a:not(:first-child){float: right;
-padding: 22px 23px;
-}
-
-.nav1 a {
-  float: left;
-  display: block;
-  color: #0F78C3;
-  text-align: center;
-  padding: 10px 31px;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-.nav1 a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.active {
-  background-color: #0F78C3;
-  color: white;
-}
-
-.nav1 .menubutton {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .nav1 a:not(:first-child) {display: none;}
-  .nav1 a.menubutton {
-    float: right;
-    display: block;
-  }
-}
 #lineA {
     line-height: 1.6;
 }
 
-.footer {
-width: 100%;
-}
-
-footer {
-  margin-top: 20px;
-  width: 100%;
-  margin: 0 auto;
-  background: #0F78C3;
-  padding: 15px 0px;
-  text-align: center;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-footer a {
-  color: #ecf7fe;
-  font-size: 20px;
-  padding: 0px 5%;
-  border-right: 1px solid white;
-  transition: all .5s ease;
-}
-footer a:first-child {
-  border-left: 1px solid white;
-}
-footer a:hover {
-  color: white;
-  opacity:.8;
-}
-
-@media screen and (max-width: 600px) {
-  .nav1.responsive {position: relative;}
-  .nav1.responsive .menubutton {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .nav1.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
 .bottom-left {
     position: absolute;
     left: 10vw;
