--- a/style.css
+++ b/style.css
@@ -186,6 +186,16 @@ hr {
     padding: 0; 
 }
 
+.center { 
+	margin-left: auto;
+    margin-right: auto;
+    display: block
+ }
+video {
+    max-width: 100%;
+    height: auto;
+}
+
 .responsiveImg {
     width: 100%;
     height: auto;
