--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+	font-family: "Myriad Pro", sans-serif;
+}
 body{
 /* My Theme Font */
 	font-family: "Myriad Pro", sans-serif;
@@ -11,6 +14,10 @@ html, body {
 	min-height: 100%;
 	/* If white boxes are made, an off tone will show the box */
 	/*background: #f1f1f1;*/
+}
+
+#conner_round{
+	border-radius: 10px;
 }
 
 .intro, .biggerfont, .biggerfont1{
@@ -175,6 +182,7 @@ margin:20px;
 	text-align:center;
 	font-style:italic;
 	padding:10px;
+	border-radius: 10px;
 }
 hr {
     height: 1px;
@@ -300,7 +308,7 @@ video {
 }
 
 .column img {
-    margin-top: 8px;
+    
     vertical-align: middle;
 }
 
@@ -311,65 +319,6 @@ video {
         max-width: 99%;
     }
 }
-/* ------------ Tile grid CODE ENDS ------------ */
+/* =============== Tile grid CODE ===============*//* =============== Tile grid CODE ===============*/
 
-.hoverOverImage * {
-	box-sizing: border-box;
-}
-.hoverOverImage {
-	position: relative;
-	display: inline-block;
-	overflow: hidden;
-	max-width: 100%;
-	height: auto;
-}
-.hoverOverImage img {
-	max-width: 100%;
-}
-.hoverOverImage .hoverOverImage-layer_bottom {
-	display: block;
-}
-.hoverOverImage .hoverOverImage-layer_top {
-	opacity: 0;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
-	color: #fff;
-	padding: 15px;
-	-moz-transition: all 0.4s ease-in-out 0s;
-	-webkit-transition: all 0.4s ease-in-out 0s;
-	-ms-transition: all 0.4s ease-in-out 0s;
-	transition: all 0.4s ease-in-out 0s;
-}
-.hoverOverImage:hover .hoverOverImage-layer_top,
-.hoverOverImage.active .hoverOverImage-layer_top {
-	opacity: 1;
-}
-.hoverOverImage .hoverOverImage-text {
-	text-align: center;
-	font-size: 120%;
-	display: inline-block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-moz-transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-}
-.hoverOverImage .hoverOverImage-text_mobile {
-	font-size: 15px;
-	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
-	border-top: 1px solid rgba(179, 179, 179, 0.7);
-	margin-top: 5px;
-	padding-top: 2px;
-	display: none;
-}
-.hoverOverImage.active .hoverOverImage-text_mobile {
-	display: block;
-}
+/* ------------ Tile grid CODE ENDS ------------ */
