--- a/style1.css
+++ b/style1.css
@@ -11,19 +11,13 @@ card {
 
 a {
 	text-decoration: none;
-	color: #0F78C3
+	color: #0F78C3;
 }
 	a:hover {
 		color: LightSkyBlue;
 	}
 
 
-.wrapper {
-	max-width: 360px;
-	margin: 0 auto;
-	padding-left: 1em;
-	padding-right: 1em;
-}
 
 .border-tlr-radius { 
 	border-top-left-radius: 10px;
@@ -52,7 +46,7 @@ a {
 .sub_title {
 	margin: 0;
 	padding: 0 0 20px;
-	color: @accent;
+	color: #0F78C3;
 	font-size: 20px;
 	font-weight: 400;
 }
@@ -98,7 +92,7 @@ a {
 	text-decoration: none;
 	color: black;
 	transition: all 0.5s ease;
-	height:60px;
+	height:70px;
 }
 
 /* card action */
@@ -164,4 +158,135 @@ a {
 .containerWork {
   margin: 1.5em auto;
   max-width: 1200px;
+}
+
+/*-------------------------------------------------------------------*/
+.hoverOverImage * {
+	box-sizing: border-box;
+}
+.hoverOverImage {
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	max-width: 100%;
+	height: auto;
+}
+.hoverOverImage img {
+	max-width: 100%;
+}
+.hoverOverImage .hoverOverImage-layer_bottom {
+	display: block;
+}
+.hoverOverImage .hoverOverImage-layer_top {
+	border-radius: 10px;
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+	color: #fff;
+	padding: 15px;
+	-moz-transition: all 0.4s ease-in-out 0s;
+	-webkit-transition: all 0.4s ease-in-out 0s;
+	-ms-transition: all 0.4s ease-in-out 0s;
+	transition: all 0.4s ease-in-out 0s;
+}
+.hoverOverImage:hover .hoverOverImage-layer_top,
+.hoverOverImage.active .hoverOverImage-layer_top {
+	opacity: 1;
+}
+.hoverOverImage .hoverOverImage-text {
+	text-align: center;
+	font-size: 160%;
+	display: inline-block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+.hoverOverImage .hoverOverImage-text_mobile {
+	font-size: 160%;
+	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
+	border-top: 1px solid rgba(179, 179, 179, 0.7);
+	margin-top: 5px;
+	padding-top: 2px;
+	display: none;
+}
+.hoverOverImage.active .hoverOverImage-text_mobile {
+	display: block;
+}
+
+
+.lbl-toggle {
+	display: block;
+
+	color:white;
+	font-family: "Myriad Pro", sans-serif;
+	background-color: #0F78C3;
+	text-align:center;
+	font-style:italic;
+	padding:10px;
+	border-radius: 10px;
+	text-align: center;
+	font-size: 1.5em; 
+	margin: .5em 0;
+	font-weight: bold;
+
+
+	cursor: pointer;
+	transition: all 0.25s ease-out;
+}
+
+.lbl-toggle:hover {
+background-color: LightSkyBlue;
+}
+
+input[type='checkbox'] {
+  display: none;
+}
+
+.lbl-toggle::before {
+  content: ' ';
+  display: inline-block;
+
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 5px solid currentColor;
+
+  vertical-align: middle;
+  margin-right: .7rem;
+  transform: translateY(-2px);
+
+  transition: transform .2s ease-out;
+}
+
+.collapsible-content,.collapsible-content1 ,.collapsible-content2 ,.collapsible-content3 {
+  max-height: 0px;
+  overflow: hidden;
+
+  transition: max-height .25s ease-in-out;
+}
+
+.toggle:checked + .lbl-toggle + .collapsible-content,
+ .toggle:checked + .lbl-toggle + .collapsible-content1,
+.toggle:checked + .lbl-toggle + .collapsible-content2,
+ .toggle:checked + .lbl-toggle + .collapsible-content3
+{
+  max-height: 2000px;
+}
+
+.toggle:checked + .lbl-toggle::before {
+  transform: rotate(90deg) translateX(-3px);
+}
+
+.toggle:checked + .lbl-toggle {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
