--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html, body {
 #fixedbacktotop {
 	color: #0F78C3;
     border: none;
-	opacity:.8;
+	opacity:.;
     color: white;
 	width: 40px;
 	height: 40px;
