--- a/style1.css
+++ b/style1.css
@@ -14,7 +14,7 @@ a {
 	color: #0F78C3;
 }
 	a:hover {
-		color: LightSkyBlue;
+		color: #ff9999;
 	}
 
 
@@ -40,7 +40,8 @@ a {
 .shadowDepth1:hover {
    box-shadow: 
   		0 1px 10px rgba(0,0,0, 0.5),
-    	0 1px 6px rgba(0,0,0, 0.5);      
+    	0 1px 6px rgba(0,0,0, 0.5);    
+		background-color: #e7f5fe;  
 }
 
 .sub_title {
@@ -82,7 +83,7 @@ a {
 	font-size: 1.2rem;
 }
 .card__meta a:hover {
-		color: LightSkyBlue;
+		color: #0F78C3;
 	}
 /* card article */
 .card__article {
@@ -290,3 +291,92 @@ input[type='checkbox'] {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+
+
+/*-------------------------------------------------------------*/
+
+.btn {
+  text-align: center;
+  font-family: "Myriad Pro", sans-serif;
+  clear:both;
+  font-size:.8em;
+  display:inline-block;
+  border-radius:10px;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.35);
+  margin:auto;
+  -webkit-transition:all .5s;
+  -moz-transition:all .5s;
+  transition:all .5s;
+  overflow:hidden;
+}
+
+.btn:hover {
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.45);
+  color:white;
+}
+
+.btn:focus {
+  box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.4);
+}
+
+.btn > span,.btn-icon > i {
+  float:left;
+  padding:13px;
+  -webkit-transition:all .5s;
+  -moz-transition:all .5s;
+  transition:all .5s;
+  line-height:1em
+}
+
+.btn > span {
+  padding:14px 18px 16px;
+  white-space:nowrap;
+  color:#FFF;
+
+}
+
+.btn-git > i{
+ background:#444444;
+}
+
+.btn-linkedin > i{
+background:#007BB6;
+}
+
+.btn-icon > i {
+  border-radius:10px 0 0 10px;
+  position:relative;
+  width:20px;
+  text-align:center;
+  font-size:1.3em;
+  color:white;
+}
+
+
+.btn-icon:hover > i,.btn-icon:focus > i {
+  color:#FFF;
+  background:#fff
+}
+
+.btn-icon > span {
+  border-radius:0 10px 10px 0
+}
+
+
+/*LinkedIn*/
+.btn-linkedin:hover > i,.btn-linkedin:focus > i {
+  color:#007BB6;
+}
+
+.btn-linkedin > span {
+  background:#007BB6;
+min-width: 250px;
+}
+
+.btn-git > span {
+  background:#444444;
+min-width: 250px;
+}
+.btn-git:hover > i,.btn-git:focus > i {
+  color:#444444;
+
