--- a/CSS/project.css
+++ b/CSS/project.css
@@ -459,3 +459,22 @@ nav.shift ul li a:hover:after {
 #conner_round {
     border-radius: 10px;
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+    }
+    
+    .video-container iframe,
+    .video-container object,
+    .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* max-width: 800px;
+    max-height: 500px;
+    text-align: center; */
+    }
