--- a/CSS/project.css
+++ b/CSS/project.css
@@ -326,7 +326,7 @@ nav.shift ul li a:after {
     left: 0;
     bottom: 0;
     right: 0;
-    margin: auto;
+    /* margin: auto; */
     width: 100%;
     height: 1px;
     content: '.';
@@ -335,6 +335,7 @@ nav.shift ul li a:after {
     visibility: none;
     opacity: 0;
     z-index: -1;
+    margin: 0;padding: 0;
 }
 
 nav.shift ul li a:hover:after {
@@ -472,8 +473,8 @@ nav.shift ul li a:hover:after {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 99%;
     /* max-width: 800px;
     max-height: 500px;
     text-align: center; */
