--- a/CSS/project.css
+++ b/CSS/project.css
@@ -493,20 +493,18 @@ nav.shift ul li a:hover:after {
 
     .iframe-container {
         overflow: hidden;
-        padding-top: 140%;
+        padding-top: 100%;
+        margin-right: auto;
         position: relative;
       }
       
       .iframe-container iframe {
          border: 0;
-         height: 140%;
+         height: 100%;
          left: 0;
          position: absolute;
-         top: -20%;
+         top: 0;
          width: 100%;
       }
       
-      /* 4x3 Aspect Ratio */
-      .iframe-container-4x3 {
-        padding-top: 75%;
-      }
+   
